--- a/src/main/resources/templates/users/userPage.html
+++ b/src/main/resources/templates/users/userPage.html
@@ -1,11 +1,34 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
 <head>
-    <title>Spring Security Example</title>
+    <meta charset="UTF-8">
+    <title>Все пользователи</title>
 </head>
 <body>
-<h1>User, welcome in your page!</h1>
-
-
+<h1>User: </h1>
+<table>
+    <tr>
+        <th>ID</th>
+        <th>Username</th>
+        <th>Имя</th>
+        <th>Фамилия</th>
+        <th>Роль(и)</th>
+        <th></th>
+        <th></th>
+    </tr>
+    <tr>
+        <td th:utext="${user.getId()}">ID</td>
+        <td th:utext="${user.getUsername()}">Логин</td>
+        <td th:utext="${user.getName()}">Имя</td>
+        <td th:utext="${user.getSurname()}">Фамилия</td>
+        <td th:utext="${user.getRoles()}">Роль(и)</td>
+    </tr>
+</table>
+<br>
+<br>
+<hr>
+<form action="/logout">
+    <button type="submit">Logout</button>
+</form>
 </body>
 </html>
